@startuml
left to right direction

abstract class Person{
    + name: string
    + email: string
}

class Phone {
    + ddd: string
    + number: string
}

class Address {
    + street: string
    + city: string
    + state: string
    + zipCode: string
}

class User {
    + password: string
}

enum RoleUser {
    ADMIN
    CLIENT
}

class Author{
    + biography: string
}

class Book {
    + title: string
    + price: decimal
    + stock: integer
    + available: boolean
}

class Order {
    + price: decimal
    + date: datetime
}

class OrderItem {
    + quantity: integer
}

enum StatusOrder {
    PROCESSING
    SENT
    DELIVERED
    CANCELLED
}

User <|-- Person
Author <|-- Person

Person "1" --> "*" Address : possesses
Person "1" --> "1" Phone : possesses
User "1" --> "*" Order : places
User "1" --> "1" RoleUser : has role

OrderItem "1" --> "1" Book : references
OrderItem "*" --> "1" Order : belongs to
Order "1" --> "1" StatusOrder : is in
Order "*" --> "1" Address : contains

Author "1" --> "*" Book : writes

@enduml